test/TestPhases/typechecker/invalid/PrevLet.blc
module

activity main ()()
    let p: int64 = 7
    var x: int64
    x = prev p
    await false
end
